--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
     "react-dom": "^18.2.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.0"
+  },
+  "dependencies": {
+    "@supabase/supabase-js": "^2.58.0",
+    "tesseract.js": "^6.0.1"
   }
 }
