--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.58.0",
+    "recharts": "^3.2.1",
     "tesseract.js": "^6.0.1"
   }
 }
